# hgan

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  main.yml  release.yml
_sources/: index.rst.txt
docs/: Makefile  conf.py  index.rst
docs/pages/: intro.md
pages/: intro.html
scripts/: generate_fake_video.py
src/hgan/: __init__.py  __main__.py  _version.py  configuration.ini  configuration.py  dataset.py  demo.py  dm_datasets.py  eval.py  experiment.py  fvd.py  hgn_datasets.py  logger.py  models.py  run.py  save_generated_images.ipynb  train.py  updates.py  utils.py
src/hgan/data/: README.md  hgn_sample_train_config.yaml
src/hgan/data/pendulum_colors/: parameters.yaml
src/hgan/data/pendulum_colors/test/: 00000.npz  00001.npz
src/hgan/data/pendulum_colors/train/: 00000.npz  00001.npz  00002.npz  00003.npz  00004.npz  00005.npz  00006.npz  00007.npz
src/hgan/dm_hamiltonian_dynamics_suite/: datasets.py  generate_dataset.py
src/hgan/dm_hamiltonian_dynamics_suite/hamiltonian_systems/: hamiltonian.py  ideal_double_pendulum.py  ideal_mass_spring.py  ideal_pendulum.py  n_body.py  simple_analytic.py  utils.py
src/hgan/hgn/: hamiltonian_generative_network.py  train.py
src/hgan/hgn/environments/: chaotic_pendulum.py  datasets.py  environment.py  environment_factory.py  gravity.py  pendulum.py  spring.py
src/hgan/hgn/experiment_params/: dataset_offline_default.yaml  dataset_online_default.yaml  train_config_default.yaml
src/hgan/hgn/experiment_params/default_environments/: chaotic_pendulum.yaml  pendulum.yaml  spring.yaml
src/hgan/hgn/networks/: debug_networks.py  decoder_net.py  encoder_net.py  hamiltonian_net.py  transformer_net.py
src/hgan/hgn/utilities/: conversions.py  gradient_flow_utils.py  hgn_result.py  integrator.py  loader.py  losses.py  statistics.py  training_logger.py
src/hgan/utilities/: loader.py
tests/: test_config.py  test_demo.py  test_experiment.py
